# dinoml_v2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  HUMANS.md  README.md  pyproject.toml
.codex/: base.md  config.toml  developer.md
agents/: BLOCKED_OR_DEFERRED.md  CURRENT_FOCUS.md  INVARIANTS.md  NEXT_CANDIDATE_WORK.md  OPERATING_LOOP.md  OP_ADMISSION.md  PM_PROMPT.md  PROMPT.md  PROVIDER_CONTRACT.md  README.md  work_model_reasoning_tracking.md
agents/plans/: clip_first_model_sprint_plan.md  conv_cutlass_plan.md  gemm_cutlass_plan.md  op_porting_checklist.md  rocm_backend_plan.md  rotary_apply_plan.md  v1_gap_audit.md
cmake/: DinoMLROCmSdk.cmake
docker/: Dockerfile  start.sh
docs/: architecture.md  cuda_remote_verification.md  gemm_cutlass_plan.md  model_pipeline_benchmarking.md  op_admission.md  op_porting_checklist.md  project_invariants.md  provider_contract.md  rocm.md  v1_gap_audit.md
examples/: __init__.py  candidate_selection.py  clip_checkpoint_workflow.py  clip_model_workflow.py  clip_text_workflow.py  coordinate_ramp.py  cuda_linear.py  fused_elementwise.py  glm_ocr_decode_workflow.py  glm_ocr_official_decode_workflow.py  glm_ocr_official_image_prefill_with_cache_workflow.py  glm_ocr_official_image_prefill_workflow.py  glm_ocr_workflow.py  image_pooling.py  subpixel_upsample.py
runtime/src/: runtime_common.cpp  runtime_cuda.cu  runtime_rocm.hip
src/dinoml/: __init__.py  cli.py  compiler.py  constant_sources.py  frontend.py  gpu_memory_validation.py  ir.py  layout.py  libgguf_cuda.py  reference.py  runtime.py  shapes.py
tests/: __init__.py  cases.py  conftest.py  conv1d_frontend_parity.py  conv3d_frontend_parity.py  dual_gemm_parity.py  einsum_parity.py  functional_conv2d_parity.py  functional_group_norm_parity.py  functional_interpolate_parity.py  index_add_parity.py  interpolate_parity.py  layer_norm_parity.py  log_softmax_parity.py  masked_fill_parity.py  masked_select_parity.py  mode_parity.py  movedim_parity.py  normalization_specializations_test_utils.py  normalize_parity.py  one_hot_parity.py  pad_parity.py  padding_layout_helpers_parity.py  pixel_shuffle_frontend_parity.py  pixel_unshuffle_frontend_parity.py  scaled_dot_product_attention_frontend_parity.py  scatter_parity.py  silu_parity.py  softmax_parity.py  tensor_filter_helpers_parity.py  test_arange_ops.py  test_argmax_ops.py  test_avg_pool1d_ops.py  test_avg_pool2d_ops.py  test_backend_registry.py  test_batch_gather_ops.py  test_cast_ops.py  test_cli.py  test_cli_workflows.py  test_clip_checkpoint_benchmark_tool.py  (+69 more)
tests/backends/: test_ck_conv_profiler_sources.py  test_ck_gguf_q8_gemm_kernel.py  test_ck_profiler_module_exports.py  test_cmake_parallelism.py  test_cpu_backend.py  test_cuda_conv1d_scaffold.py  test_cuda_conv3d_scaffold.py  test_cuda_cutlass_conv_profiler_validation.py  test_cuda_transposed_conv1d_scaffold.py  test_cuda_transposed_conv2d_scaffold.py  test_dual_gemm_family.py  test_rocm_ck_codegen_catalog.py  test_rocm_ck_conv_dispatch.py  test_rocm_ck_profile_sweep.py  test_rocm_conv3d_scaffold.py  test_rocm_profiler_artifacts.py  test_rocm_scaffold.py  test_rocm_transposed_conv1d_scaffold.py
tests/benchmarks/: test_dtype_support_matrix.py  test_ops_benchmark_suite.py
tests/cpu/: test_cast_cpu_ops.py  test_contracts.py  test_conv1d_frontend_parity.py  test_conv1d_parity.py  test_conv3d_frontend_parity.py  test_conv3d_parity.py  test_dual_gemm_parity.py  test_einsum_parity.py  test_functional_conv2d_parity.py  test_functional_group_norm_parity.py  test_functional_interpolate_parity.py  test_group_norm_parity.py  test_index_add_parity.py  test_interpolate_upsampling_parity.py  test_layer_norm_functional_parity.py  test_log_softmax_parity.py  test_masked_fill_parity.py  test_masked_select_parity.py  test_mode_parity.py  test_movedim_parity.py  test_nms_family_parity.py  test_normalization_specializations_parity.py  test_normalize_parity.py  test_one_hot_parity.py  test_pad_parity.py  test_padding_layout_helpers_parity.py  test_pixel_shuffle_frontend_parity.py  test_pixel_unshuffle_frontend_parity.py  test_scaled_dot_product_attention_frontend.py  test_scatter_family_parity.py  test_silu_parity.py  test_softmax_parity.py  test_tensor_filter_helpers_parity.py  test_transposed_conv1d_frontend_parity.py  test_transposed_conv1d_parity.py  test_transposed_conv2d_frontend_parity.py  test_transposed_conv2d_parity.py  test_unflatten_parity.py  test_upsample_parity.py  test_upsampling_family_parity.py
tests/cuda/: test_contracts.py  test_cuda_conv1d_frontend_parity.py  test_cuda_conv1d_parity.py  test_cuda_conv3d_frontend_parity.py  test_cuda_conv3d_parity.py  test_cuda_dual_gemm_parity.py  test_cuda_mode_parity.py  (+30 more)
tools/: bench_ck_gguf_q8_gemm.hip  benchmark_clip_checkpoint.py  benchmark_fused_elementwise.py  benchmark_glm_ocr_dinoml_real_image_cached_generate.py  benchmark_glm_ocr_dinoml_real_image_prefill_generate.py  benchmark_glm_ocr_static_cache_pipeline.py  benchmark_glm_ocr_transformers_decode.py  benchmark_glm_ocr_transformers_image_prefill.py  benchmark_glm_ocr_transformers_real_image.py  benchmark_qwen2_5_vl_static_cache_pipeline.py  benchmark_reductions.py  benchmark_softmax.py  bootstrap_parallel_worktree.py  check_glm_ocr_decode_parity.py  ck_bmm_profiler_core.hpp  ck_bmm_profiler_main.cpp  ck_bmm_profiler_pybind.cpp  ck_conv_profiler_core.hpp  ck_conv_profiler_main.cpp  ck_conv_profiler_pybind.cpp  ck_gemm_profiler_core.hpp  ck_gemm_profiler_main.cpp  ck_gemm_profiler_pybind.cpp  cutlass_bmm_profiler_core.cuh  cutlass_bmm_profiler_main.cu  cutlass_bmm_profiler_pybind.cu  cutlass_conv_profiler_core.cuh  cutlass_conv_profiler_main.cu  cutlass_conv_profiler_pybind.cu  cutlass_gemm_profiler_core.cuh  cutlass_gemm_profiler_main.cu  cutlass_gemm_profiler_pybind.cu  generate_ck_bmm_profiler_dispatch.py  generate_ck_bmm_unit.py  generate_ck_conv_profiler_dispatch.py  generate_ck_conv_unit.py  generate_ck_flash_attn_fwd.py  generate_ck_gemm_profiler_dispatch.py  generate_ck_gemm_unit.py  generate_codex_shell_env_policy.py  (+11 more)
(+3812 files in other folders)
