[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinoml"
version = "0.2.0"
description = "DinoML v2 vertical-slice compiler/runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
validate = [
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = ["third_party", "tmp", "build", "dist", ".git"]
