[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinoml"
version = "0.2.0"
description = "DinoML v2"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "jinja2>=3.1",
    "numpy>=1.24",
    "pybind11>=2.13",
]

[project.optional-dependencies]
dev = [
    "ninja>=1.11",
    "pytest>=8",
]
validate = [
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
